[package]
name = "bots"
version = "0.1.0"
authors = ["Andrew <andrew@egeler.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
bitflags = "1.2.1"

[target.'cfg(unstable_wasm_ffi)'.dependencies]
wasm-bindgen = "0.2"

[features]
"c_ffi" = []
"unstable_wasm_ffi" = []
